package chapter13.prac1;

public class FastPathFinder extends PathFinder{

    @Override
    public Path findPath(Location from, Location to) {
        System.out.println("Fast Path Finder");
        return null;
    }
}
