package chapter13.prac1;

public abstract class GPS {
    public abstract Location findCurrentLocation();
}
