package chapter13.prac1;

public class LargeMap extends Map{

}
