package chapter13.prac1;

public abstract class Map {

}
