package chapter13.prac1;

public abstract class PathFinder {

    public abstract Path findPath(Location from, Location to);

}
