package chapter13.prac1;

public abstract class Screen {
    public abstract void drawMap(Map map);

}
