package chapter13.prac1;

public class SmallMap extends Map{

}
